.k8s/production/egt-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egtUtil-forum-invite-generator
  labels:
    app: egtUtil-forum-invite-generator
  namespace: production
spec:
  type: NodePort
  ports:
    - name: egtUtil-forum-invite-generator-http
      port: 80
      targetPort: 3001
      protocol: TCP
  selector:
    app: egtUtil-forum-invite-generator
