.k8s/production/egt-client-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: egtutil-forum-invite-generator
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: joinforum.eliteguardtraining.com
    http:
      paths:
      - path: /
        backend:
          serviceName: egtutil-forum-invite-generator
          servicePort: 80
  tls:
  - hosts:
    - joinforum.eliteguardtraining.com
    secretName: egtutil-forum-invite-generator-tls-cloudflare
